# EquiLand

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
EquiLand/: CMakeLists.txt  EquiLand.cpp  EquiLand.h  includes_pch.cpp  includes_pch.h
EquiLand/OMPEval/: EquityCalculator.cpp  EquityCalculator.h  Random.h
EquiLand/fonts/: BinaryFontAwesome.hpp  BinaryFontAwesomeBrands.hpp  BinaryFontCards.hpp  BinaryFontRoboto.hpp  DefinesFontAwesome.hpp
EquiLand/imgui/: imgui.cpp  imgui_demo.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imstb_truetype.h
EquiLand/source/: AppSettings.hpp  Application.cpp  Application.h  ApplicationMenu.hpp  Fonts.hpp  Freetype.hpp  Keyboard.hpp  Notifications.hpp  Settings.hpp  Styles.hpp  custom_widgets.hpp  gui.hpp  structures.hpp
EquiLand/source/utils/: ColorHelpers.hpp  MathUtils.hpp
EquiLand/source/widgets/: AnimatedCustomWidgets.hpp  BasicCustomWidgets.hpp  BoardSelect.hpp  CardSelection.hpp  DeadCardsSelect.hpp  IncludeAllWidgets.hpp  RangeSelect.hpp  TreeRangeEditor.hpp
Tests/: CMakeLists.txt  tests_app.cpp  tests_libpeval.cpp
libpeval/: CMakeLists.txt  Constants.hpp  Hand.hpp  helpers.hpp
